# gifwalker

./: Cargo.toml  README.md
assets/: app.css
docs/superpowers/plans/: 2026-04-17-debounce-grid-hyprland.md  2026-04-17-giphy-provider-pivot.md  2026-04-17-grid-quality-animation-scroll.md
src/: app.rs  clipboard.rs  config.rs  controller.rs  giphy.rs  lib.rs  main.rs  model.rs  provider.rs  theme.rs
src/ui/: settings.rs  window.rs
tests/: app.rs  clipboard.rs  config.rs  controller.rs  giphy.rs  theme.rs
