[package]
name = "gifwalker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
directories = "5"
gdk-pixbuf = "0.19"
gio = "0.19"
glib = "0.19"
gtk4 = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
